--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,7 @@
     <string name="hint_title">Título</string>
     <string name="hint_description">Descripción</string>
     <string name="text_button_createpost">Crear Post</string>
+
+    <string name="facebook_app_id">151894232121942</string>
+    <string name="fb_login_protocol_scheme">fb151894232121942</string>
 </resources>
