--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -18,7 +18,9 @@
     <string name="secondword_detail">Me Gusta</string>
 
     <string name="login_error">Something happen</string>
-    <string name="hint_title">Título</string>
-    <string name="hint_description">Descripción</string>
-    <string name="text_button_createpost">Crear Post</string>
+    <string name="hint_title">Title</string>
+    <string name="hint_description">Description</string>
+    <string name="text_button_createpost">Create Post</string>
+    <string name="menu_signout">Sign Out</string>
+    <string name="menu_about">About</string>
 </resources>
