--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,6 @@
 
     <string name="facebook_app_id">151894232121942</string>
     <string name="fb_login_protocol_scheme">fb151894232121942</string>
+    <string name="menu_signout">Cerrar Sesión</string>
+    <string name="menu_about">Acerca de</string>
 </resources>
